fix wpm issue during game end & fix height overflow of scoreboard

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -40,9 +40,7 @@ textarea {
 }
 
 .scoreboard {
-  z-index: 3;
-  position: absolute;
-  top: 3%;
+  height: 95vh;
   border: 1px solid var(--font-color);
   border-radius: 0.3em;
   padding: 0.3rem 1rem;
@@ -51,15 +49,15 @@ textarea {
   font-size: 1rem;
   transition: 1s;
   opacity: 1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.2rem;
 }
 
 .score-board-child {
-  margin-top: 0.5rem;
-  padding: 2px 10px;
-  display: inline-block;
-  position: relative;
   width: 100%;
-  height: 60vh;
+  max-height: max-content;
+  flex-grow: 1;
 }
 
 .scoreboard h2 {
@@ -146,7 +144,7 @@ textarea {
   margin-right: calc(1rem + 2px);
   font-size: 1.25rem;
   line-height: 2rem;
-  max-height: 10rem;
+  height: 100%;
   margin-bottom: 1rem;
   overflow: hidden;
 }
